# OpenCv

Virtual Painter/: CMakeLists.txt
Virtual Painter/src/: VirtualPainter.cpp
